test/no_arg_sep.err
ERROR: line: 3, col: 8
Expected only one register name.
