test/no_arg_sep.s
# No argument separator
mov r1, r2
mov r2 r3, r4
mov r3, r4
